[gd_scene load_steps=16 format=2]

[ext_resource path="res://DefenseLevel.gd" type="Script" id=1]
[ext_resource path="res://screens/TopLeftMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Bee/Bee.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/ProtectedWorker/ProtectedWorker.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/level1.png" type="Texture" id=5]
[ext_resource path="res://assets/flowers/flower-pink-active-rotate.png" type="Texture" id=6]
[ext_resource path="res://assets/flowers/flower-pink-active.png" type="Texture" id=7]
[ext_resource path="res://assets/flowers/flower-blue-active.png" type="Texture" id=8]
[ext_resource path="res://assets/flowers/flower-blue-active-rotated.png" type="Texture" id=9]
[ext_resource path="res://assets/flowers/flower-white-active-rotate.png" type="Texture" id=10]
[ext_resource path="res://assets/flowers/flower-white-active.png" type="Texture" id=11]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 3.31854, -2.34479, 0, 0, 0, 0, 977.6, -2.34479, 0, 0, 0, 0, 1921.67, -4.8623, 0, 0, 0, 0, 3.31854, -2.34479 )
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Container" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 380.0
margin_top = 242.0
margin_right = 420.0
margin_bottom = 282.0
_sections_unfolded = [ "Visibility" ]

[node name="Bee" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 925.869, 645.56 )
scale = Vector2( 1.60899, 1.75898 )
z_index = 3
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="HornetSpawn" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="StartIn" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="HornetPath" type="Path2D" parent="." index="4"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="HornetSpawn" type="PathFollow2D" parent="HornetPath" index="0"]

position = Vector2( 3.31854, -2.34479 )
z_index = 4
z_as_relative = false
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Z Index" ]

[node name="Gethering" type="Node" parent="." index="5"]

position = Vector2( 362.523, 855.957 )
z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="Worker2" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 1064.92, 855.957 )
z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="Worker3" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 1696.82, 858.474 )
z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="background" type="Sprite" parent="." index="8"]
editor/display_folded = true

[node name="flower-blue" type="Sprite" parent="Gethering" index="0"]

position = Vector2( 961.198, 538.341 )
scale = Vector2( 1.68372, 1.39474 )
z_index = -1
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="flower-pink" type="AnimatedSprite" parent="." index="9"]

position = Vector2( 273.436, 870.008 )
scale = Vector2( 1.85974, 1.91358 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Z Index" ]

[node name="flower-blue" type="AnimatedSprite" parent="." index="10"]

position = Vector2( 1582.94, 860.958 )
scale = Vector2( 1.98341, 2.14113 )
frames = SubResource( 3 )
animation = "default"

[node name="flower-white" type="AnimatedSprite" parent="." index="11"]

position = Vector2( 969.845, 863.141 )
scale = Vector2( 1.77235, 1.7538 )
frames = SubResource( 4 )
animation = "default"

[node name="HoneyBringer" parent="Gethering" index="3" instance=ExtResource( 7 )]

position = Vector2( 329.795, 863.51 )

[node name="HoneyBringer2" parent="Gethering" index="4" instance=ExtResource( 7 )]

position = Vector2( 1042.25, 863.51 )

[node name="HoneyBringer3" parent="Gethering" index="5" instance=ExtResource( 7 )]

position = Vector2( 1666.6, 848.405 )

[node name="HUD" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Message" type="Label" parent="HUD" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = -235.0
margin_right = 223.0
margin_bottom = -134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "You have failed to protect workers"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Try again" type="TextureButton" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 705.0
margin_top = 473.0
margin_right = 1212.0
margin_bottom = 561.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="Menu" type="TextureButton" parent="HUD" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 728.0
margin_top = 592.0
margin_right = 1174.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[connection signal="hit" from="Bee" to="." method="_on_Bee_hit"]

[connection signal="recovery" from="Bee" to="." method="_on_Bee_recovery"]

[connection signal="recovery" from="Bee" to="Container" method="_on_Bee_recovery"]

[connection signal="timeout" from="HornetSpawn" to="." method="_on_HornetSpawn_timeout"]

[connection signal="timeout" from="StartIn" to="." method="_on_StartIn_timeout"]

[connection signal="killed" from="Gethering/HoneyBringer" to="." method="_on_HoneyBringer_killed"]

[connection signal="killed" from="Gethering/HoneyBringer2" to="." method="_on_HoneyBringer2_killed"]

[connection signal="killed" from="Gethering/HoneyBringer3" to="." method="_on_HoneyBringer3_killed"]


